# workspace

./: .travis.yml  AUTHORS.md  CMakeLists.txt  README.md  workspace.qbs
.tx/: config
data/: CMakeLists.txt
data/menu/: CMakeLists.txt  hawaii-applications.menu  menu.qbs
data/settings/: CMakeLists.txt  io.liri.desktop.background.gschema.xml.in  io.liri.desktop.lockscreen.gschema.xml.in  io.liri.desktop.panel.gschema.xml  io.liri.hardware.enums.xml  io.liri.hardware.power.gschema.xml  io.liri.session.locale.gschema.xml  org.hawaiios.desktop.interface.gschema.xml  org.hawaiios.desktop.keybindings.gschema.xml  org.hawaiios.desktop.panel.gschema.xml  org.hawaiios.system.gschema.xml  settings.qbs
headers/: CMakeLists.txt  config.h.in
platformtheme/: CMakeLists.txt  hawaiitheme.cpp  hawaiitheme.h  hawaiitheme_p.cpp  hawaiitheme_p.h  hintssettings.cpp  hintssettings.h  liritheme.cpp  liritheme.h  liritheme_p.cpp  liritheme_p.h  main.cpp  resourcehelper.cpp  resourcehelper.h
polkitagent/: CMakeLists.txt  hawaii-polkit-agent.desktop  main.cpp  org.hawaiios.PolkitAgent.desktop  org.hawaiios.PolkitAgent.desktop.in  policykitagent.cpp  policykitagent.h  policykitagent_p.h  polkitagent.qrc
polkitagent/qml/: authdialog.qml
polkitagent/translations/: hawaii-polkit-agent.ts  hawaii-polkit-agent_it.ts  org.hawaiios.PolkitAgent_it.desktop.in
powermanager/: CMakeLists.txt  batterywatcher.cpp  batterywatcher.h  hawaii-powermanager.desktop  idlewatcher.cpp  idlewatcher.h  liri-powermanager.desktop  main.cpp  powermanager.cpp  powermanager.h  powermanager.qbs
screencast/: screencast.qbs
screenshoot/: CMakeLists.txt  org.hawaii.screenshot.desktop
screenshoot/qml/: main.qml
screenshooter/: CMakeLists.txt  greenisland-screenshooter.xml  main.cpp  screenshooter.cpp  screenshooter.h  screenshooter_p.h  screenshot.cpp  screenshot.h  screenshot_p.h
screenshooter/qml/: main.qml
screenshooter/translations/: hawaii-screenshot_ca.ts  hawaii-screenshot_it.ts  org.hawaiios.Screenshot_ca.desktop.in
screenshot/: CMakeLists.txt  imageprovider.cpp  imageprovider.h  io.liri.Screenshot.desktop.in  main.cpp  org.hawaiios.Screenshot.desktop.in  screenshooter.cpp  screenshooter.h  screenshot.qbs
screenshot/qml/: main.qml
screenshot/translations/: hawaii-screenshot.ts  hawaii-screenshot_it.ts  io.liri.Screenshot_ca.desktop.in  io.liri.Screenshot_da.desktop.in  io.liri.Screenshot_de.desktop.in  io.liri.Screenshot_es_419.desktop.in  io.liri.Screenshot_fr.desktop.in  io.liri.Screenshot_it.desktop.in  io.liri.Screenshot_pt_BR.desktop.in  io.liri.Screenshot_pt_PT.desktop.in  io.liri.Screenshot_ru.desktop.in  io.liri.Screenshot_zh_HK.desktop.in  liri-screenshot.ts  liri-screenshot_ca.ts  liri-screenshot_da.ts  liri-screenshot_de.ts  liri-screenshot_es_419.ts  liri-screenshot_fr.ts  liri-screenshot_it.ts  liri-screenshot_ja.ts  liri-screenshot_nl.ts  liri-screenshot_pt_BR.ts  liri-screenshot_pt_PT.ts  liri-screenshot_ru.ts  liri-screenshot_zh_HK.ts  org.hawaiios.Screenshot_it.desktop.in
